2018-04-09  Andrew Burgess  <andrew.burgess@embecosm.com>

	* lib/mi-support.exp (mi_run_cmd_full): Fix regexp and add a
	timeout.

2018-02-02  Andrew Burgess  <andrew.burgess@embecosm.com>

	* gdb.base/examine-backward.exp: Be more forgiving of failures to
	read some addresses.

2018-02-05  Andrew Burgess  <andrew.burgess@embecosm.com>

	* gdb.mi/mi-cmd-param-changed.exp
	(target_supports_scheduler_locking): New proc.
	(test_command_param_changed): Call new proc.

2018-03-14  Tom Tromey  <tom@tromey.com>

	PR cli/14977:
	* gdb.base/printcmds.exp (test_printf): Add printf test of %s with
	a null pointer.
	* gdb.base/wchar.exp: Likewise.

2018-03-14  Tom Tromey  <tom@tromey.com>

	PR cli/19918:
	* gdb.base/printcmds.exp (test_printf): Add printf test using '-'
	flag.

2018-03-08  Simon Marchi  <simon.marchi@ericsson.com>

	PR gdb/22841
	* boards/remote-stdio-gdbserver.exp (${board}_file): Pass
	"target" to remote_exec.

2018-03-08  Simon Marchi  <simon.marchi@polymtl.ca>

	PR gdb/22841
	* boards/gdbserver-base.exp (${board}_file, ${board}_download,
	${board}_upload): Remove.

2018-03-07  Andreas Arnez  <arnez@linux.vnet.ibm.com>

	* gdb.cp/watch-cp.cc: New test.
	* gdb.cp/watch-cp.exp: New file.

2018-03-06  Andrew Burgess  <andrew.burgess@embecosm.com>

	* gdb.base/infcall-nested-structs.exp: New file.
	* gdb.base/infcall-nested-structs.c: New file.
	* gdb.base/float.exp: Add riscv support.

2018-03-02  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* gdb.dlang/watch-loc.c: Use %progbits instead of @progbits.
	* gdb.mi/dw2-ref-missing-frame-func.c: Likewise.

2018-02-28  Sergio Durigan Junior  <sergiodj@redhat.com>

	* gdb.server/abspath.exp: New file.
	* lib/gdb.exp (with_cwd): New procedure.

2018-02-28  Simon Marchi  <simon.marchi@ericsson.com>

	* lib/gdb.exp (gdb_is_target_1): Add prompt_regexp parameter and
	use it.
	(gdb_is_target_remote_prompt): New proc.
	(gdb_is_target_remote): Use gdb_is_target_remote_prompt.