@@ -1,5 +1,10 @@
 2018-04-09  Andrew Burgess  <andrew.burgess@embecosm.com>
 
+	* gdb.base/callfuncs.exp (fetch_all_registers): Add riscv register
+	filter pattern.
+
+2018-04-09  Andrew Burgess  <andrew.burgess@embecosm.com>
+
 	* lib/mi-support.exp (mi_run_cmd_full): Fix regexp and add a
 	timeout.
 
